Update: Struktur Inhalt durch einleitendes Kapitel angepasst. Sec Theorie neu gegliedert.

--- a/main.tex
+++ b/main.tex
@@ -18,12 +18,12 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 % Danksagung
 \section*{Danksagung}\label{sec:Danksagung}
-\input{content/00_danksagung.tex}
+\input{content/000_danksagung.tex}
 \newpage
 
 %Abstract
 \section*{Abstract}\label{sec:Abstract}
-\input{content/0_abstract.tex}
+\input{content/00_abstract.tex}
 \newpage
 
 %PDF Vorlageblatt
@@ -55,6 +55,10 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 \setcounter{page}{1}
 \pagenumbering{arabic}
+
+% Einleitung
+\section{Hintergrund, Begründung und Ziel der Studie}\label{sec:Einleitung}
+\input{content/0_Einleitung.tex}
 
 % Theorie
 \section{Theorie}\label{sec:Theorie}
