Strukturierung des Kapitels Theorie und Hinzufügen von relevanten Literaturverweisen.

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,10 +1,41 @@
 % ---------------------------------------
 \subsection{\textit{WiP:} Theoretische Überlegungen anhand der Eltern-Kind-Beziehung} \label{sec:TheretischeÜberlegungen}
 \textit{TBD: Infografik - Eltern Kind Beziehung}
-
+\begin{itemize}
+    \item Interaktion \citeA{Resch1999} S. 91, Kap. 3 (Buch von Marc)
+    \begin{itemize}
+        \item Familie als Kontext S. 91
+        \item Ineraktionelle Affektregulation S.101
+    \end{itemize}
+    \item Kognitive Entwicklung $\rightarrow$ Umfeld, Vererbung aus \citeA{Berk2011} Kapitel 5.4.2; Seite 224 (Online ZHAW)
+    \begin{itemize}
+        \item Pos. Korrelation bei Zuneigung und Engagement
+        \item schlechte Betreuung S.225 $\rightarrow$ schlechte kognitive Entwicklung
+        \item Kommunizieren lernen S.231 / Kap. 5.5 $\rightarrow$ Blickkontakt, Interaktion, viel Unterhaltung förder S. 235, Förderung des frühen Spracherwerbs S.236
+    \end{itemize}
+    \item Soziale Entwicklung
+    \begin{itemize}
+        \item Soziale Entwicklung S.469ff \citeA{Siegler2008} (Buch Jeannette)
+        \item Soziale Kognition \& Soziale Entwicklung aus \citeA{Bischof2011} S. 237 (Buch von Marc)
+    \end{itemize}
+    \item Emotionale Entwicklung von Kindern in der Famile aus \citeA{Siegler2008} (Buch Jeannette)
+    \begin{itemize}
+        \item Qualität Eltern Kind Beziehung S. 561
+    \end{itemize}
+    \item Bindung aus diversen Quellen
+    \begin{itemize}
+        \item Bindung und Bindungsverhalten S.98 \citeA{Resch1999} (Buch von Marc)
+        \item Bindungstheorie S.583ff \citeA{Siegler2008} (Buch Jeannette)
+    \end{itemize}
+    \item Die Entwicklungs des Selbst S.274 aus \citeA{Berk2011} (ZHAW Online) 
+    \item Erziehungsstile S. 649 aus \citeA{Siegler2008} (Buch Jeannette)
+\end{itemize}
 
 % ---------------------------------------
-\subsection{TBD: Theoretische Ansätze} \label{sec:TheretischeAnsätze}
+\subsection{TBD: Entwicklungsaufgaben der Kinder} \label{sec:Entwicklungsaufgaben}
+
+% ---------------------------------------
+\subsection{TBD: Theoretische Ansätze auf Seiten der Eltern} \label{sec:TheretischeAnsätze}
 
 \subsubsection{Bindung}\label{sec:Bindung}
 
