Notizen zu weiterem Vorgehen betreffend Theorie nach Eltern-Kind-Beziehung.

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,10 +1,12 @@
 % ---------------------------------------
 \subsection{\textit{WiP:} Theoretische Überlegungen anhand der Eltern-Kind-Beziehung}\label{sec:TheretischeÜberlegungen}
-Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung, wurde dies aufgrund wissenschaflticher Ergebnisse zum Begriff Elter-Kind-Beziehung erweitert, da auch ein konstanter, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppe aufbauen. Dabei muss die Gelegenheit zu regelmässigen Zwiegesprächen gegeben sein, wodurch durch die Anwesenheit und Zuspruch der vertraut gewordenen Menschen die innere Sicherheit, Geborgenehit und Angstfreiheit beim Kind. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmale unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern bezieht. Wo sich hingegen die Strukturmerkmale auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kinder bezieht. Die Qualität der Beziehung kann einerseit unter der systemischen Perspektive betrachtet werden, in dem der Familienprozess als das Ergebnis wechselseiteiger Beeinflussung aller Familienmitgliederbetrachtet wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Weiter kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung und deren erziehungsstile gesetzt wird. 
+Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung, wurde dies aufgrund wissenschaftlicher Ergebnisse zum Begriff Eltern-Kind-Beziehung erweitert, da auch ein konstanter, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppe aufbauen. Dabei muss die Gelegenheit zu regelmässigen Zwiegesprächen gegeben sein, wodurch durch die Anwesenheit und Zuspruch der vertraut gewordenen Menschen die innere Sicherheit, Geborgenheit und Angstfreiheit beim Kind. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmale unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern bezieht. Wo sich hingegen die Strukturmerkmale auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kinder bezieht. Die Qualität der Beziehung kann einerseit unter der systemischen Perspektive betrachtet werden, in dem der Familienprozess als das Ergebnis wechselseiteiger Beeinflussung aller Familienmitgliederbetrachtet wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Weiter kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung und deren erziehungsstile gesetzt wird. 
 \begin{center}
     \textit{TBD: Infografik - Eltern Kind Beziehung}
 \end{center}
+Grafik anhand Interaktion beschreiben. Dabei auf die Entwicklungsuafgaben der Kinder und das Medienverhalten der Erwachsenen eingehen. Im Fokus soll die Interaktion stehen. Davon abgeleiten können auf die Entwkclingsuafgaben der Kinder eingegangen werden.
 
+Medien können einen Einfluss auf Familie ausüben sieh dazu JamesFocus 2013.
 \begin{itemize}
     \item Interaktion \citeA{Resch1999} S. 91, Kap. 3 (Buch von Marc)
     \begin{itemize}
