--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,18 +1,35 @@
 % ---------------------------------------
 \subsection{\textit{WiP:} Theoretische Überlegungen anhand der Eltern-Kind-Beziehung}\label{sec:TheretischeÜberlegungen}
 Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung, wurde dies aufgrund wissenschaftlicher Ergebnisse zum Begriff Eltern-Kind-Beziehung erweitert, da auch ein konstanter, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppe aufbauen. Dabei muss die Gelegenheit zu regelmässigen Zwiegesprächen gegeben sein, wodurch durch die Anwesenheit und Zuspruch der vertraut gewordenen Menschen die innere Sicherheit, Geborgenheit und Angstfreiheit beim Kind. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmale unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern bezieht. Wo sich hingegen die Strukturmerkmale auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kinder bezieht. Die Qualität der Beziehung kann einerseit unter der systemischen Perspektive betrachtet werden, in dem der Familienprozess als das Ergebnis wechselseiteiger Beeinflussung aller Familienmitgliederbetrachtet wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Weiter kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung und deren erziehungsstile gesetzt wird. 
-\begin{center}
-    \textit{TBD: Infografik - Eltern Kind Beziehung}
-\end{center}
-Grafik anhand Interaktion beschreiben. Dabei auf die Entwicklungsuafgaben der Kinder und das Medienverhalten der Erwachsenen eingehen. Im Fokus soll die Interaktion stehen. Davon abgeleiten können auf die Entwkclingsuafgaben der Kinder eingegangen werden.
+\begin{figure}%[htbp] -> am Schluss fürs Feintuning :-)
+  \centering
+     \includegraphics[width=1.0\textwidth]{content/Grafik/Infografik_ElternKindBeziehung.png}
+  \caption{TBD: Infografik: Eltern-Kind-Beziehung}
+  \label{fig:InfografikElternKindBeziehung}
+\end{figure}
 
-Medien können einen Einfluss auf Familie ausüben sieh dazu JamesFocus 2013.
+Im Rahmen dieser Arbeit steht die Interaktion (\prettyref{fig:InfografikElternKindBeziehung}) zwischen den Eltern und dem Kind im Mittelpunkt. Dabei liegt der Fokus auf dem Medienverhalten auf Seiten der Eltern und den Entwicklungsaufgaben auf der Seite des Kindes. Generell können Medien gemäss \citeA[S.~6]{Willemse2013} einen Einfluss auf die Familie ausüben und umgekehrt kann das Familienklima zur Art des Medienumgangs beitragen. Familiale Einflussfaktoren auf die Mediennutzungsind  jedoch  nicht  auf  das  medienerzieherische  Handeln  der  Eltern  reduziert  und  lassen sich gemäss \cite{Kammerl2012} in medienbezogene und medienunabhängige Einflussfaktoren unterteilen. Die Interaktion und Kommunikation in der Familie, der Erziehungsstil der Eltern sowie soziodemografische Merkmale der Eltern sind wichtige Faktoren in der Eltern-Kind-Beziehung.
+
+Grundsätzlich ist der Mensch gemäss \citeA[S.~91]{Resch1999} in ein Gefüge von zwischenmenschlichen Relationen eingebettet, welche einen wesentlichen Einfluss auf das innerer Weltverständnis und das Selbstbild nehmen.  Die frühe Kindheit stellt eine kritische Periode in der Entwicklung dar, wobei die wichtigste frühe Umgebung des Kindes die Familie, resp. das primäre Umfeld, ist (vgl. ebd., S. 92ff.). Wird die Familie im Entwicklungskontext angeschaut, so kann der elterliche Einfluss auf das Kind durch die zwei Begriffe \textit{Beziehung} und \textit{Erziehung} definiert werden. Dadurch weist die Eltern-Kind-Beziehung immer Beziehungsqualitäten und Erziehungsqualitäten auf.  
+
+Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gelte als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist, sondern die Eltern und die Kinder stehen in einer reziproken sozialisatorischen Beziehung zueinander. \citeA{Hofer1992} nennt wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Dabei wird die Synchronizität der Interaktion, die Persönlichkeit der Eltern, die Beziehungsqualität der Partner, sowie die affektive und kognitive Ausstattung des Kindes selbst genannt. 
+
+Auch kindliche Faktoren beeinflussen die frühen Interaktionen deutlich. Das Kind ist schon sehr früh in der Lage, selektiv und adäquat auf die emotionale Ausdrucksform der Bezugsperson einzugehen \cite{Harris1994}. Dabei haben Kinder im Säuglingsalter von der Bezugsperson die Erwartung, dass diese adäquat auf die Gefühlsausdrücke reagiert. Dies ermöglicht bereits dem Säugling einen Informationsaustausch zu seiner Bezugsperson. Somit ist ein Säugling in der Lage, sich anhand dem emotionalen Ausdruck der Bezugsperson anzunähern oder es bleiben zu lassen \cite{Resch1999}. Dieser Vorgang wird als \textit{soziale Vergewisserung (engl. social referencing)} bezeichnet und meint damit, dass ein Kind nach der Beantwortung seiner affektiven Gestimmtheit sucht, wenn es sich seiner Bezugsperson zuwendet. Es konsultiert den Gesichtsausdruck der Bezugsperson, um über die Bedeutung eines ihm unbekannten Ereignisses eine Sinnszuschreibung \textit{(engl. meaning attribution)} zu erhalten. Diese frühen affektiven Regulatoren der Interaktion dienen der Entwicklung des kindlichen Interessens und des kindlichen Bewertungsschemas. Je nach emotionalem Ausutausch wird das Kind eine Kohärenz in seinen Erwartungen entwickeln oder nicht. Wenn die kindlichen emotionalen Signale adäquat beantwortet werden, entsteht eine günstige Basis des Erfahrungslernens \cite[S.~95]{Resch1999}. Die emotionale Kommunikation konstituiert das kindliche Weltbild in Form von Selbst- und Objektrepräsentanzen. Inkonsistente emotionale Kommunikation führt zu einem weniger köhärenten und weniger vorhersagbaren inneren Schemata der Welt. 
+
+Ein weiterer Interaktionsfaktor stellt die \textit{Induktion} aus der empirischen Säuglingsforschung dar. Kindliche Gefühlszustände und Verhaltensmuster werden durch elterliche Verhaltensmuster induziert \cite{Cummings1994}. Intrusive feindliche und unsensitive Elternreaktionen können einen negativen Erregnungsprozess im Kind auslösen, woraus sich ungünstige Interferenzen mit den sich entwickelnden Fähigkeiten des Kindes ergeben, seine eigenen Erregungsimpulse zu modulieren und zu regulieren.  
+
+Über Imitationsprozesse kann die \textit{Modellbildung} im Kind durch das elterliche Verhalten beeinflusst werden. Elterliche Verhaltensweisen und Sichtweisen gegenüber der Welt werden internalisiert \cite{Resch1999}. Die Eltertn ebeeinflussen die Entwicklung des Kindes nicht nur als direkte Akteure, sondern eben auch durch ihre Vorbildfunktion. 
+
+Durch die frühe Interaktion mit einer Bezugsperson wird auch die interaktionelle Affektregulation geprägt. Nach \citeA{Dornes1993, Dornes1997} werden in den frühen Interaktionen zwischen Mutter und Kind affekthaltige Handlungen ausgetauscht. Das Kind kann seine innere Erfahrung mit einem anderen Menschen teilen und mit diesem darüber Kommunizieren. Eine Form dieser affektiven Kommunikation wird gemäss \citeA{Stern1985} als \textit{Affektabstimmung (engl. affective attunement)} bezeichnet. Dabei wird auf bestimmte Gefühlsäusserungen des Kindes von Seiten der Mutter differenziert geantwortet, wobei die Antwort etwas stärker oder schwächer als die des Kindes ausfällt. Durch gezieltes Abdämpfen oder Stimulieren der kindlichen Gefühslausdrücke und Aktionen können Erlebnis- und Handlugsfolgen akzentuiert, abgedämpft oder sogar gelöscht werden. Reagiert eine Bezugsperson unsensibel auf das Kind und werden Handlungsintentionen immer wieder unterbrochen, so kann sich dies negativ auf die Entwicklung des Kindes auswirken \cite{Resch1999}.
+
+
+Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontingenz} genannt. Gemeint ist dabei die regelhafte Aufeinanderfolge einzelnen Verhaltensschritte. Die Wichtigkeit kontingenter Beantwortung kindlicher Signale, vor allem in der Anfangsphase der Eltern-Kind-Beziehung, betont \citeA{Papousek1987, Papousek1989}. Kontingenz bedeutet dabei die zeitliche und inhaltliche Passung der elterlichen Reaktion auf das Verhalten des Kindes, also die zeitliche Folge der Reaktion und die inhaltliche Entsprechung. Diese frühe Verständigung zwischen Eltern und Kind würde nicht gelingen, wenn die Eltern nicht kompensatorisch an die begrenzte kindlichen Voraussetzungen anpassen würden. Diese Fähigkeit schafft die Voraussetzung für eine gelingende Kommunikation mit dem Säugling im vorsprachlichen Alter. Kontingentes Antworten von Seiten der Eltern ermöglicht eine Kohärenz der Interaktion, die zum subjektiven Gefühl der Kontrolle beim Kind führt.
+
+
+% ---------------------------------------
+\subsection{TBD: Ev. Entwicklungsaufgaben der Kinder} \label{sec:Entwicklungsaufgaben}
+
 \begin{itemize}
-    \item Interaktion \citeA{Resch1999} S. 91, Kap. 3 (Buch von Marc)
-    \begin{itemize}
-        \item Familie als Kontext S. 91
-        \item Ineraktionelle Affektregulation S.101
-    \end{itemize}
     \item Kognitive Entwicklung $\rightarrow$ Umfeld, Vererbung aus \citeA{Berk2011} Kapitel 5.4.2; Seite 224 (Online ZHAW)
     \begin{itemize}
         \item Pos. Korrelation bei Zuneigung und Engagement
@@ -37,8 +54,7 @@ Medien können einen Einfluss auf Familie ausüben sieh dazu JamesFocus 2013.
     \item Erziehungsstile S. 649 aus \citeA{Siegler2008} (Buch Jeannette)
 \end{itemize}
 
-% ---------------------------------------
-\subsection{TBD: Entwicklungsaufgaben der Kinder} \label{sec:Entwicklungsaufgaben}
+
 
 % ---------------------------------------
 \subsection{TBD: Theoretische Ansätze auf Seiten der Eltern} \label{sec:TheretischeAnsätze}
