Change structure: Sec Theorie und Einleitung mit SubSec Interaktion und Entwicklungsaufgaben Kind

--- a/content/0_Einleitung.tex
+++ b/content/0_Einleitung.tex
@@ -7,6 +7,8 @@ Mit dem Einzug von elektronischen Medien in den Familien wie Smartphone, Tablets
 \subsection{Annahmen und bisherige Forschung}
 Die meisten Studien im Bereich elektronische Medien und Kinder wurden im Alter zwischen 9 und 16 Jahren durchgeführt \cite{Chaudron2015}. Es scheint, als ob wissenschaftliche Untersuchungen im Bereich Medienumgang der Säuglinge und Kleinkinder fehlt, obwohl diese zwingend notwendig ist \cite{Olafsson2014, Konitzer2017}. Aus diesem Grund scheint es nicht verwunderlich, dass \enquote{digitale Medien und kleiner Kinder} in der Öffentlichkeit kontrovers diskutiert wird, dabei geht es primär um die Grundsatzdiskussion, ob die digitalen Medien eher nutzen oder eher schaden \cite{Divsi2015}. Durch die reduzierte Datenlage scheinen sich Experten aus unterschiedlichen Disziplinen berufen zu fühlen, ihre Expertise in der Öffentlichkeit zu verbreiten. Als Beispiel soll hier die im deutschsprachigen Raum erhältliche Brochüre \enquote{Digitale Medien als Spielverderber für Babys} von \citeA{MariaLuisaNuesch2017} dienen, welche als Sammlung unterschiedlicher Texte aus der Psychologie, der Pädagogik und der Medienfachwelt zusammengesetzt ist. Gemäss \citeA{Huether2017} können Fernsehgeräte oder Mobiltelefone die entscheidende Phase nach der Geburt zwischen Mutter und Kind stören, da sich die Mutter während der ersten Tage nicht genügend um ihr Kind widmen kann und dadurch die Bindungsbeziehung zwischen diesen beiden nicht gelingt. Zudem könne sich der Konsum der Bezugspersonen negativ auf die Entwicklung des sich entwickelnden Gehirns der Neugeborenen auswirken. \citeA{Kaeppeli2017} meint es sei überaus wichtig, dass stillende Mütter oder Mütter die das Kind mit der Flasche füttern, präsent sind. Das Kind spüre, wenn die Mutter nicht wirklich anwesend sei, was den Stresspegel der Kinder ansteigen lasse. Es sein deshalb wichtig, das Kind von Störquellen wie Fernseher oder Smartphone abzuschirmen. Es ist auffällig, wie oft in diesen Artikeln auf die Bindung der Eltern-Kind-Beziehung eingegangen wird. Sei dies die Bindung des Kindes an und für sich, oder die Bindung der Bezugsperson. So beschreibt \citeA{Prekop2017}, dass eine in der Bindung gestörte Bezugsperson sich gegenüber den Gefühlen für andere Menschen schützt, indem sie ihre Bindung lieber zu technischen Dingen wie Fernseher oder Computer sucht. Ein Elternmagazin aus der Schweiz schreibt in einem Artikel, dass Babys eher in zugewandte Gesichter als in abgewandte blicken. Der Blick der Eltern auf ihr Smartphone könnte somit Folgen für die Gerhirnentwicklung haben, da ein Baby den Blickkontakt für die Entwicklung eines Gefühls für sich selbst zu bekommen. Da Babys auf direkten Blickkontakt mit erhöhter Gehirnaktivität reagieren, könnte ein Nicht-Ansehen Folgen für die Entwicklung der Bindung auf die Bezugsperson haben \cite{Weber2017}. Die aktuelle Studie \citeA{Blikk2017} will einen signifikanten Zusammenhang zwischen Einschlafstörungen von Säuglingen und der Nutzung elektronischer Medien wie Fernseher oder Musik durch die Eltern während des Einschlafvorgangs der Säuglinge gefunden haben. Es benötigt weitere Studien, die sich diesem Thema annehmen \cite{Wartella2016}. Die Frage, wie Eltern ihre Kinder bezüglich Kreativität, Lernen und Entwicklung in Bezug zum Medienkonsum prägen, ist unzureichend beantwortet und benötigt weitere Forschung \cite{AmericanAcademyofPediatrics2011,Troseth2016}. 
 
+Generell können Medien gemäss \citeA[S.~6]{Willemse2013} einen Einfluss auf die Familie ausüben und umgekehrt kann das Familienklima zur Art des Medienumgangs beitragen. Familiale Einflussfaktoren auf die Mediennutzungsind  jedoch  nicht  auf  das  medienerzieherische  Handeln  der  Eltern  reduziert  und  lassen sich gemäss \cite{Kammerl2012} in medienbezogene und medienunabhängige Einflussfaktoren unterteilen. Die Interaktion und Kommunikation in der Familie, der Erziehungsstil der Eltern sowie soziodemografische Merkmale der Eltern sind wichtige Faktoren in der Eltern-Kind-Beziehung.
+
 Bindung scheint ein zentrales Element in der Interaktion zwischen Bezugspersonen und Säuglingen im Umgang mit Medien zu sein \cite{Prekop2017, Huether2017, Blikk2017}. Im Rahmen der Risikofaktoren von Problemverhalten bei Kindern wird häufig vom Faktor Stress bei den Eltern gesprochen, der eng mit dem Verhalten in Erziehungssituationen gezeigt wird und über längere Zeit ungünstige Folgen für das Individuum sowohl dessen Umfeld aufweist \cite{Cina2009}. Zudem scheint Stress mit dem Bindungsstil verknüpft zu sein. Tägliche Widrigkeiten scheinen Auswirkungen auf das Erziehungsverhalten der Eltern in Form eines negativen und aversiven Bindungsstils \cite{Dumas1989, Webster-Stratton1988} und einer geringen emotionalen Verfügbarkeit für die Kinder \cite{Campbell1991} zu haben. 
 
 Psychische, physische sowohl soziale Störungen stehen im Zusammenhang mit Stress \cite{Elfering2002, Burisch1994}. Insbesondere die engen Familienmitglieder sind oft direkt oder indirekt von den Auswirkungen des Stresses betroffen. So zeigen Studien einen Zusammenhang zwischen Stress und schlechtem psychischen Befinden \cite{Burisch1994, Krohne1997}, einer negativen Partneschaftsqualität \cite{Bodenmann2000, Bodenmann1999, Bodenmann2000a} und ungünstigem Erziehungsverhalten \cite{Abidin1992, Belsky1984, WebsterStratton2000}.
@@ -15,7 +17,7 @@ Psychische, physische sowohl soziale Störungen stehen im Zusammenhang mit Stres
 \subsection{Forschungslücke und Ziel der Studie}
 Aufgrund der geringen Datenlage und der Fehlenden Studien im Medienverhalten von Säuglingen möchte diese Arbeit dazu beitragen, die laufende Diskussion mit empirischen Daten zu versorgen. Beim Lesen der Ratgeberliteratur wurde eine stark emotional angefärbte Meinungsabtausch festgestellt. Das Thema scheint medial präsent zu sein und auch im privaten Umfeld scheinen die meisten eine Position die für oder gegen dem elektronischen Medienkonsum während der Betreuung von Kleinkindern spricht zu vertreten. Der Schwierigkeit Säuglinge direkt zu befragen will diese Arbeit begegnen, indem sie das Medienverhalten der Eltern untersucht, die einen Teil für eine gelungene Eltern-Kind-Beziehung ausmacht. Zudem konnten aktuell keine Studien gefunden werden, die Eltern im Umgang mit Medien und ihren Kindern in den Mittelpunkt der Untersuchung rückten.  
 
-
+Das Ziel dieser Arbeit ist es, die Interaktion  (\prettyref{fig:InfografikElternKindBeziehung}) zwischen den Eltern und dem Kind näher zu betrachten. Dabei liegt die Erfassung des Medienverhaltens auf Seiten der Eltern und den Entwicklungsaufgaben auf der Seite des Kindes im Fokus. Dabei soll das Medienverhalten der Eltern anhand der Bindung, dem aktuell erlebten Stress und der Auswirkung der beiden Faktoren auf das subjektive Wohlbefinden detailliert erfasst werden. 
 
 % ---------------------------------------
 \subsection{TBD: Aufbau der Arbeit} \label{sec:Aufbau}
