--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -1,15 +1,16 @@
 % ---------------------------------------
 \subsection{\textit{WiP:} Theoretische Überlegungen anhand der Eltern-Kind-Beziehung}\label{sec:TheretischeÜberlegungen}
 Die Eltern-Kind-Beziehung bezeichnet das aufeinander bezogene, gegenseitig bindende Verhaltensrepertoire zwischen dem Kind und den erwachsenen Menschen, welche die Elternrolle übernommen haben \cite{ElternKindBeziehung1999}. Ursprünglich als Mutter-Kind-Beziehung, wurde dies aufgrund wissenschaftlicher Ergebnisse zum Begriff Eltern-Kind-Beziehung erweitert, da auch ein konstanter, zuverlässiger Vater als Bezugsperson für das Kind dienen kann. Neben der Bindung zu den Hauptbezugspersonen können Kinder individualisierte Bindung in abgestufter Intensität zu andern Mitgliedern der Familie oder Sozialgruppe aufbauen. Dabei muss die Gelegenheit zu regelmässigen Zwiegesprächen gegeben sein, wodurch durch die Anwesenheit und Zuspruch der vertraut gewordenen Menschen die innere Sicherheit, Geborgenheit und Angstfreiheit beim Kind. Durch Kontinuität und Zuverlässigkeit in der liebevollen Betreuung entsteht eine sichere Bindung \cite{ElternKindBeziehung1999}. Gemäss \citeA{Wirtz2013} bezeichnet die Eltern-Kind-Beziehung verschiedene Aspekte des Verhältnisses zwischen Eltern und Kindern. Dabei wird zwischen Struktur- und Prozessmerkmale unterschieden. In dieser Arbeit stehen vor allem die Prozessmerkmale im Fokus, die sich auf die Qualität des Verhältnisses zwischen Eltern und Kindern bezieht. Wo sich hingegen die Strukturmerkmale auf verwandtschaftliche oder gesetzliche Verhältnisse zwischen Eltern und Kinder bezieht. Die Qualität der Beziehung kann einerseit unter der systemischen Perspektive betrachtet werden, in dem der Familienprozess als das Ergebnis wechselseiteiger Beeinflussung aller Familienmitgliederbetrachtet wird. Charakteristisch dafür sind Offenheit, Wechselseitigkeit, Harmonie, Streitkultur oder Grenzen. Weiter kann das spezifische Generationenverhältnis zwischen Eltern und Kindern betrachtet werden, wobei der Fokus meist auf der Erziehung und deren erziehungsstile gesetzt wird. 
+
 \begin{figure}%[htbp] -> am Schluss fürs Feintuning :-)
   \centering
-     \includegraphics[width=1.0\textwidth]{content/Grafik/Infografik_ElternKindBeziehung.png}
+     \includegraphics[width=1.0\textwidth]{content/Grafik/Infografik_ElternKindBeziehung_Uebersicht.png}
   \caption{TBD: Infografik: Eltern-Kind-Beziehung}
   \label{fig:InfografikElternKindBeziehung}
 \end{figure}
 
-Im Rahmen dieser Arbeit steht die Interaktion (\prettyref{fig:InfografikElternKindBeziehung}) zwischen den Eltern und dem Kind im Mittelpunkt. Dabei liegt der Fokus auf dem Medienverhalten auf Seiten der Eltern und den Entwicklungsaufgaben auf der Seite des Kindes. Generell können Medien gemäss \citeA[S.~6]{Willemse2013} einen Einfluss auf die Familie ausüben und umgekehrt kann das Familienklima zur Art des Medienumgangs beitragen. Familiale Einflussfaktoren auf die Mediennutzungsind  jedoch  nicht  auf  das  medienerzieherische  Handeln  der  Eltern  reduziert  und  lassen sich gemäss \cite{Kammerl2012} in medienbezogene und medienunabhängige Einflussfaktoren unterteilen. Die Interaktion und Kommunikation in der Familie, der Erziehungsstil der Eltern sowie soziodemografische Merkmale der Eltern sind wichtige Faktoren in der Eltern-Kind-Beziehung.
-
+% ---------------------------------------
+\subsubsection{Eltern-Kind-Interaktion}\label{sec:Interaktion}
 Grundsätzlich ist der Mensch gemäss \citeA[S.~91]{Resch1999} in ein Gefüge von zwischenmenschlichen Relationen eingebettet, welche einen wesentlichen Einfluss auf das innerer Weltverständnis und das Selbstbild nehmen.  Die frühe Kindheit stellt eine kritische Periode in der Entwicklung dar, wobei die wichtigste frühe Umgebung des Kindes die Familie, resp. das primäre Umfeld, ist (vgl. ebd., S. 92ff.). Wird die Familie im Entwicklungskontext angeschaut, so kann der elterliche Einfluss auf das Kind durch die zwei Begriffe \textit{Beziehung} und \textit{Erziehung} definiert werden. Dadurch weist die Eltern-Kind-Beziehung immer Beziehungsqualitäten und Erziehungsqualitäten auf.  
 
 Der Übergang von einer Paargemeinschaft zur Elternschaft führt zu einer grundlegenden Umstrukturierung einer Zweier- zu einer Dreierbeziehung \cite{Hofer1992, Buergin1998}. Dies gelte als eine zentrale Entwicklungsaufgabe von Familien, wobei die Eltern-Kind-Beziehung nicht als einseitige Einflussnahme zu verstehen ist, sondern die Eltern und die Kinder stehen in einer reziproken sozialisatorischen Beziehung zueinander. \citeA{Hofer1992} nennt wichtige Einflussgrössen der dyadischen Beziehung zwischen Vater, Mutter und Kind, die sich auf die kindliche Entwicklung auswirken können: Dabei wird die Synchronizität der Interaktion, die Persönlichkeit der Eltern, die Beziehungsqualität der Partner, sowie die affektive und kognitive Ausstattung des Kindes selbst genannt. 
@@ -22,13 +23,13 @@ Ein weiterer Interaktionsfaktor stellt die \textit{Induktion} aus der empirische
 
 Durch die frühe Interaktion mit einer Bezugsperson wird auch die interaktionelle Affektregulation geprägt. Nach \citeA{Dornes1993, Dornes1997} werden in den frühen Interaktionen zwischen Mutter und Kind affekthaltige Handlungen ausgetauscht. Das Kind kann seine innere Erfahrung mit einem anderen Menschen teilen und mit diesem darüber Kommunizieren. Eine Form dieser affektiven Kommunikation wird gemäss \citeA{Stern1985} als \textit{Affektabstimmung (engl. affective attunement)} bezeichnet. Dabei wird auf bestimmte Gefühlsäusserungen des Kindes von Seiten der Mutter differenziert geantwortet, wobei die Antwort etwas stärker oder schwächer als die des Kindes ausfällt. Durch gezieltes Abdämpfen oder Stimulieren der kindlichen Gefühslausdrücke und Aktionen können Erlebnis- und Handlugsfolgen akzentuiert, abgedämpft oder sogar gelöscht werden. Reagiert eine Bezugsperson unsensibel auf das Kind und werden Handlungsintentionen immer wieder unterbrochen, so kann sich dies negativ auf die Entwicklung des Kindes auswirken \cite{Resch1999}.
 
-
 Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontingenz} genannt. Gemeint ist dabei die regelhafte Aufeinanderfolge einzelnen Verhaltensschritte. Die Wichtigkeit kontingenter Beantwortung kindlicher Signale, vor allem in der Anfangsphase der Eltern-Kind-Beziehung, betont \citeA{Papousek1987, Papousek1989}. Kontingenz bedeutet dabei die zeitliche und inhaltliche Passung der elterlichen Reaktion auf das Verhalten des Kindes, also die zeitliche Folge der Reaktion und die inhaltliche Entsprechung. Diese frühe Verständigung zwischen Eltern und Kind würde nicht gelingen, wenn die Eltern nicht kompensatorisch an die begrenzte kindlichen Voraussetzungen anpassen würden. Diese Fähigkeit schafft die Voraussetzung für eine gelingende Kommunikation mit dem Säugling im vorsprachlichen Alter. Kontingentes Antworten von Seiten der Eltern ermöglicht eine Kohärenz der Interaktion, die zum subjektiven Gefühl der Kontrolle beim Kind führt.
 
+TBD: Erziehungsstile der Eltern
+
+\subsubsection{Entwicklungsaufgaben der Kinder}\label{sec:Entwicklungsaufgaben}
 
 % ---------------------------------------
-\subsection{TBD: Ev. Entwicklungsaufgaben der Kinder} \label{sec:Entwicklungsaufgaben}
-
 \begin{itemize}
     \item Kognitive Entwicklung $\rightarrow$ Umfeld, Vererbung aus \citeA{Berk2011} Kapitel 5.4.2; Seite 224 (Online ZHAW)
     \begin{itemize}
@@ -57,13 +58,13 @@ Die wechselseitige Bedingtheit des Verhaltens von Menschen wird \textit{Kontinge
 
 
 % ---------------------------------------
-\subsection{TBD: Theoretische Ansätze auf Seiten der Eltern} \label{sec:TheretischeAnsätze}
+\subsection{TBD: Bindung}\label{sec:Bindung}
 
-\subsubsection{Bindung}\label{sec:Bindung}
+% ---------------------------------------
+\subsection{TBD: Stress}\label{sec:Stress}
 
-\subsubsection{Stress}\label{sec:Stress}
-
-\subsubsection{Subjektives Wohlbefinden}\label{sec:Swb}
+% ---------------------------------------
+\subsection{TBD: Subjektives Wohlbefinden}\label{sec:Swb}
 
 
 
